# LRA

./: .gitmodules  AffineOneGapAlign.h  Alchemy2.cpp  Alignment.h  AlignmentBlock.h  BasicEndpoint.h  Chain.h  ChainRefine.h  ClusterRefine.h  Clustering.h  CompareLists.h  DivideSubByCol.h  DivideSubByCol1.h  DivideSubByCol2.h  DivideSubByRow.h  DivideSubByRow1.h  DivideSubByRow2.h  Fragment.h  Fragment_Info.h  Genome.h  GlobalChain.h  IndelRefine.h  IndexInformativeKmers.cpp  IndexedSeed.h  Info.h  Input.h  LICENSE.txt  LinearExtend.h  LocalRefineAlignment.h  LogLookUpTable.h  MMIndex.h  Makefile  MapRead.h  Map_highacc.h  Map_lowacc.h  Mapping_ultility.h  Merge.h  MergeAnchors.h  MergeSplit.h  MinCount.h  (+28 more)
.github/workflows/: ccpp.yml
call_assembly_SVs/: ParseAlignment.py  README.md  SamToVCF.py  callassemblysv.json  callassemblysv.snakefile  combinehapSV.json  combinehapSV.snakefile  hg19_centromere.bed  hg19_centromere.wide.bed  mergeSV.py  parsealignment_maternal.sh  parsealignment_paternal.sh  run_callsv.sh
htslib/: config.h  config.mk  config.status  configure  htslib.pc.tmp
htslib/autom4te.cache/: output.0  requests  traces.0
htslib/lib/pkgconfig/: htslib.pc
subprojects/: htslib.wrap
